Fixing the script adding the java installation and updating the documentation how to fix the AccessControlExeption